--- a/index.html
+++ b/index.html
@@ -10,10 +10,26 @@
             width: 100%;
             height: 100%;
         }
+
+        #slider {
+            /*
+            position: relative is needed for the handle to be
+            positioned correctly, and border-radius: 100% just
+            makes the div round.
+        */
+            position: relative;
+            border-radius: 100%;
+
+            /* Other than the above two, go wild! */
+            height: 300px;
+            width: 300px;
+            background: linear-gradient(90deg, #FF9A9E, #FAD0C4);
+        }
     </style>
 </head>
 
 <body>
+    <div id="circleSliderID"></div>
     <div id="map" class="map"></div>
     <button onclick="AddGeoJsonObjects">Add GeoJson objects</button>
     <script src='./index.js'></script>
