--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 <body style="font-family: 'Adobe Clean Light'">
     <div id="circleSliderID"></div>
     <div id="map" class="map"></div>
+    <img src='./resource/iai_elta.png' style="position : absolute; 
+        top: 20; right: 20; width: 10vw; height: 1-vh" />
     <button onclick="AddGeoJsonObjects">Add GeoJson objects</button>
     <div class="grey"></div>
     <script src='./index.js'></script>
