--- a/index.html
+++ b/index.html
@@ -29,13 +29,18 @@
 </head>
 
 <body style="font-family: 'Adobe Clean Light'">
+    <div id="mouse-position"></div>
     <div id="circleSliderID"></div>
     <div id="map" class="map"></div>
     <img src='./resource/iai_elta.png' style="position : absolute; 
         top: 20; right: 20; width: 10vw; height: 1-vh" />
-    <button onclick="AddGeoJsonObjects">Add GeoJson objects</button>
     <div class="grey"></div>
+    <div style=" color:aqua; position :fixed; top: 0; left: 0em; width: 200rem; height: 100rem; z-index: -100;">
+        <div style="position: absolute;; top: 20rem; width: 50rem; height: 50rem; color: blue; z-index: 1000;">some text
+        </div>
+    </div>
     <script src='./index.js'></script>
 </body>
+
 
 </html>
