--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 <body style="font-family: 'Adobe Clean Light'">
     <div id="mouse-position"></div>
     <div id="circleSliderID"></div>
+    <div id="popup"></div>
+    <div id="popup-content"></div>
+    <button onclick="addTurfCircle()">addTurfCircle</button>
     <div id="map" class="map"></div>
     <img src='./resource/iai_elta.png' style="position : absolute; 
         top: 20; right: 20; width: 10vw; height: 1-vh" />
